--- a/acidfood.html
+++ b/acidfood.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>01902574042</strong></p>
+					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+#############(I NEED NUMBER HERE)</strong></p>
 				</div>
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
@@ -152,9 +152,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<a href="#">
-						<img src="images/logo.jpg" alt="logo" width="300px" height="200px">
-					</a>
+					<font face="">Need A Logo Here</font>
+				<!--	<a href="#">
+						<img src="images/logo.png" alt="logo">
+					</a> -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
@@ -168,43 +169,25 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div> <!-- End of /.navbar-header -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		    </div> <!-- End of /.navbar-header -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav nav-main">
-							<li class="active"><a href="#">HOME</a></li>
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      	<ul class="nav navbar-nav nav-main">
+		        	<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
 					<li><a href="#">FORUM</a></li>
-					<li><a href="bmi.php">BMI</a></li>
-					<li class="dropdown">
-						<a href="healthyFood.html">
-							HEALTHY FOOD
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-						   <li><a  href="healthyFood.html">Good Health</a></li>
-						    <li><a  href="hairfood.html">Hair</a></li>
-						    <li><a  href="brainfood.html">Brain and Memory</a></li>
-						    <li><a  href="skinfood.html">Healthy Skin</a></li>
-								<li><a  href="bloodfood.html">BLODD FLOW and CIRCULATION</a></li>
-								<li><a  href="eyefood.html">Healthy Eyes</a></li>
-								<li><a  href="kidneyfood.html">Healthy Kidney</a></li>
-								<li><a  href="liverfood.html">Healthy Liver</a></li>
-								<li><a  href="diabetesfood.html">CONTROL DIABETES</a></li>
-								<li><a  href="acidfood.html">ACID REFLUX</a></li>
-								<li><a  href="pressurefood.html">LOWER BLOOD PRESSURE</a></li>
-						</ul>
-					</li> <!-- End of /.dropdown -->
-					<li><a href="healthyFood.html">UNHEALTHY FOOD</a></li>
-          <li><a href="#">ABOUT</a></li>
-						</ul> <!-- End of /.nav-main -->
-				</div>	<!-- /.navbar-collapse -->
+					<li><a href="#">BMI</a></li>
+					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
+					<li><a href="unhealthyFood.html">UNHEALTHY FOOD</a></li>
+		        </ul> <!-- End of /.nav-main -->
+		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
@@ -277,6 +260,148 @@
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
 	</section>	<!-- End of section -->
+  
+  <!--ACID REFLUX CATAGORIE Start
+		================================================== -->
+
+	<section id="catagorie">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="block">
+						<div class="block-heading">
+							<h2>FOOD FOR ACID REFLUX</h2>
+						</div>
+						<div class="row">
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/ginger.jpg" alt="...">
+										<h3>GINFER</h3>
+									</a>
+											<div class="caption">
+												<p>Ginger has natural anti-inflammatory properties <a href="ginger.html">Read More</a>
+</p>
+<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/vegetables.jpg" alt="...">
+										<h3>VEGETABLE</h3>
+									</a>
+											<div class="caption">
+												<p>Vegetables are naturally low in fat and sugar, and they help reduce stomach acid. <a href="vegetables.html">Read More</a></p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+								<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/oatmeal.jpg" alt="...">
+										<h3>OATMEAL</h3>
+									</a>
+											<div class="caption">
+												<p>Oatmeal is a breakfast favorite, a whole grain, and an excellent source of fiber. <a href="oatMeal.html">Read More</a>
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/noncitrus fruits.jpg" alt="...">
+										<h3>NONCITRUS FRUITS</h3>
+									</a>
+											<div class="caption">
+												<p>Noncitrus fruits, including melons, bananas, apples, and pears, are less likely to trigger reflux symptoms <a href="nonCitrusFruit.html">Read More</a>
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/lean meats and seafood.jpg" alt="...">
+										<h3>LEAN MEATS and SEAFOOD</h3>
+									</a>
+											<div class="caption">
+												<p>Lean meats, such as chicken, turkey, fish, and seafood, are low-fat and reduce symptoms of acid reflux. <a href="leanMeatAndSeafood.html">Read More</a>
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<div class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<a class="catagotie-head" href="blog-single.html">
+										<img src="images/healthy/egg whites.jpg" alt="...">
+										<h3>EGG WHITE</h3>
+									</a>
+											<div class="caption">
+												<p>Egg whites are a good option. Stay away from egg yolks, though, which are high in fat and may trigger reflux symptoms.<a href="eggWhite.html">Read More</a>
+</p>
+												<p>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Like</span>
+													</a>
+													<a href="#" class="btn btn-default btn-transparent" role="button">
+														<span>Comment</span>
+													</a>
+													</p>
+											</div>	<!-- End of /.caption -->
+									</div>	<!-- End of /.thumbnail -->
+								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+						</div>	<!-- End of /.row -->
+					</div>	<!-- End of /.block -->
+				</div>	<!-- End of /.col-md-12 -->
+			</div>	<!-- End of /.row -->
+		</div>	<!-- End of /.container -->
+	</section>	<!-- End of Section -->
 
 		<!-- CALL TO ACTION Start
     ================================================== -->
