--- a/kidneyfood.html
+++ b/kidneyfood.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>01902574042</strong></p>
+					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+#############(I NEED NUMBER HERE)</strong></p>
 				</div>
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
@@ -152,9 +152,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<a href="#">
-						<img src="images/logo.jpg" alt="logo" width="300px" height="200px">
-					</a>
+					<font face="">Need A Logo Here</font>
+				<!--	<a href="#">
+						<img src="images/logo.png" alt="logo">
+					</a> -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
@@ -168,43 +169,25 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div> <!-- End of /.navbar-header -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		    </div> <!-- End of /.navbar-header -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav nav-main">
-							<li class="active"><a href="#">HOME</a></li>
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      	<ul class="nav navbar-nav nav-main">
+		        	<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
 					<li><a href="#">FORUM</a></li>
-					<li><a href="bmi.php">BMI</a></li>
-					<li class="dropdown">
-						<a href="healthyFood.html">
-							HEALTHY FOOD
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-						   <li><a  href="healthyFood.html">Good Health</a></li>
-						    <li><a  href="hairfood.html">Hair</a></li>
-						    <li><a  href="brainfood.html">Brain and Memory</a></li>
-						    <li><a  href="skinfood.html">Healthy Skin</a></li>
-								<li><a  href="bloodfood.html">BLODD FLOW and CIRCULATION</a></li>
-								<li><a  href="eyefood.html">Healthy Eyes</a></li>
-								<li><a  href="kidneyfood.html">Healthy Kidney</a></li>
-								<li><a  href="liverfood.html">Healthy Liver</a></li>
-								<li><a  href="diabetesfood.html">CONTROL DIABETES</a></li>
-								<li><a  href="acidfood.html">ACID REFLUX</a></li>
-								<li><a  href="pressurefood.html">LOWER BLOOD PRESSURE</a></li>
-						</ul>
-					</li> <!-- End of /.dropdown -->
-					<li><a href="healthyFood.html">UNHEALTHY FOOD</a></li>
-          <li><a href="#">ABOUT</a></li>
-						</ul> <!-- End of /.nav-main -->
-				</div>	<!-- /.navbar-collapse -->
+					<li><a href="#">BMI</a></li>
+					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
+					<li><a href="unhealthyFood.html">UNHEALTHY FOOD</a></li>
+		        </ul> <!-- End of /.nav-main -->
+		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
@@ -278,6 +261,148 @@
 		</div>	<!-- End of /.container -->
 	</section>	<!-- End of section -->
 
+  <!--KIDNEY CATAGORIE Start
+    ================================================== -->
+
+  <section id="catagorie">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="block">
+            <div class="block-heading">
+              <h2>FOOD FOR HEALTHY KIDNEY</h2>
+            </div>
+            <div class="row">
+
+                <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/cauliflower.jpg" alt="...">
+                    <h3>Cauliflower</h3>
+                  </a>
+                      <div class="caption">
+                        <p>Cauliflower is a nutritious vegetable that’s a good source of many nutrients <a href="cauliflower.html">Read More</a>
+  </p>
+                        <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+                <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/blueberries.jpg" alt="...">
+                    <h3>BLUEBERRY</h3>
+                  </a>
+                      <div class="caption">
+                        <p>Blueberries are packed with nutrients and one of the best sources of antioxidants you can eat.<a href="blueberry.html">Read More</a>
+  </p>
+  <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+                <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/sea bass.jpg" alt="...">
+                    <h3>SEA BASS</h3>
+                  </a>
+                      <div class="caption">
+                        <p> Sea bass is a high quality protein that contains incredibly healthy fats called omega-3s.<a href="seabass.html">Read More</a>
+  </p>
+                        <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/redgrapes.jpg" alt="...">
+                    <h3>RED GRAPES</h3>
+                  </a>
+                      <div class="caption">
+                        <p>Red grapes are not only delicious but also deliver a ton of nutrition in a small package.<a href="redGrape.html">Read More</a>
+  </p>
+                        <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/egg whites.jpg" alt="...">
+                    <h3>EGG WHITES</h3>
+                  </a>
+                      <div class="caption">
+                        <p>Although egg yolks are very nutritious, they contain high amounts of phosphorus, making egg whites a better <a href="eggWhite.html">Read More</a>
+  </p>
+                        <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+              <div class="col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <a class="catagotie-head" href="blog-single.html">
+                    <img src="images/healthy/olive oil.jpg" alt="...">
+                    <h3>OLIVE OIL</h3>
+                  </a>
+                      <div class="caption">
+                        <p>Olive oil is a healthy source of fat and phosphorus-free, making it a great option for people with kidney disease.<a href="oliveOil.html">Read More</a>
+  </p>
+                        <p>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Like</span>
+                          </a>
+                          <a href="#" class="btn btn-default btn-transparent" role="button">
+                            <span>Comment</span>
+                          </a>
+                          </p>
+                      </div>	<!-- End of /.caption -->
+                  </div>	<!-- End of /.thumbnail -->
+                </div>	<!-- End of /.col-sm-6 col-md-4 -->
+            </div>	<!-- End of /.row -->
+          </div>	<!-- End of /.block -->
+        </div>	<!-- End of /.col-md-12 -->
+      </div>	<!-- End of /.row -->
+    </div>	<!-- End of /.container -->
+  </section>	<!-- End of Section -->
 		<!-- CALL TO ACTION Start
     ================================================== -->
 
