--- a/liverfood.html
+++ b/liverfood.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>01902574042</strong></p>
+					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+#############(I NEED NUMBER HERE)</strong></p>
 				</div>
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
@@ -152,9 +152,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<a href="#">
-						<img src="images/logo.jpg" alt="logo" width="300px" height="200px">
-					</a>
+					<font face="">Need A Logo Here</font>
+				<!--	<a href="#">
+						<img src="images/logo.png" alt="logo">
+					</a> -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
@@ -168,43 +169,25 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div> <!-- End of /.navbar-header -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		    </div> <!-- End of /.navbar-header -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav nav-main">
-							<li class="active"><a href="#">HOME</a></li>
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      	<ul class="nav navbar-nav nav-main">
+		        	<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
 					<li><a href="#">FORUM</a></li>
-					<li><a href="bmi.php">BMI</a></li>
-					<li class="dropdown">
-						<a href="healthyFood.html">
-							HEALTHY FOOD
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-						   <li><a  href="healthyFood.html">Good Health</a></li>
-						    <li><a  href="hairfood.html">Hair</a></li>
-						    <li><a  href="brainfood.html">Brain and Memory</a></li>
-						    <li><a  href="skinfood.html">Healthy Skin</a></li>
-								<li><a  href="bloodfood.html">BLODD FLOW and CIRCULATION</a></li>
-								<li><a  href="eyefood.html">Healthy Eyes</a></li>
-								<li><a  href="kidneyfood.html">Healthy Kidney</a></li>
-								<li><a  href="liverfood.html">Healthy Liver</a></li>
-								<li><a  href="diabetesfood.html">CONTROL DIABETES</a></li>
-								<li><a  href="acidfood.html">ACID REFLUX</a></li>
-								<li><a  href="pressurefood.html">LOWER BLOOD PRESSURE</a></li>
-						</ul>
-					</li> <!-- End of /.dropdown -->
-					<li><a href="healthyFood.html">UNHEALTHY FOOD</a></li>
-          <li><a href="#">ABOUT</a></li>
-						</ul> <!-- End of /.nav-main -->
-				</div>	<!-- /.navbar-collapse -->
+					<li><a href="#">BMI</a></li>
+					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
+					<li><a href="unhealthyFood.html">UNHEALTHY FOOD</a></li>
+		        </ul> <!-- End of /.nav-main -->
+		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
@@ -277,6 +260,146 @@
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
 	</section>	<!-- End of section -->
+
+
+  	<!--LIVER CATAGORIE Start
+  		================================================== -->
+
+  	<section id="catagorie">
+  		<div class="container">
+  			<div class="row">
+  				<div class="col-md-12">
+  					<div class="block">
+  						<div class="block-heading">
+  							<h2>FOOD FOR HEALTHY LIVER</h2>
+  						</div>
+  						<div class="row">
+
+  								<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/coffee.jpg" alt="...">
+  										<h3>COFFEE</h3>
+  									</a>
+  											<div class="caption">
+  												<p>Your daily cup of coffee may play an even more critical role to your health than you thought.<a href="coffee.html">Read More</a></p>
+  <p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+  								<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/oily fish.jpg" alt="...">
+  										<h3>OILLY FISH</h3>
+  									</a>
+  											<div class="caption">
+  												<p> Fish is an alternative to not-so-healthy meats like fatty cuts of pork and beef. <a href="oillyFish.html">Read More</a></p>
+  												<p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+  								<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/avocados.jpg" alt="...">
+  										<h3>AVOCADOS</h3>
+  									</a>
+  											<div class="caption">
+  												<p>Avocados are staples in Central and South American cuisine. <a href="avocados.html">Read More</a></p>
+  												<p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+
+  							<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/olive oil.jpg" alt="...">
+  										<h3>OLIVE OIL</h3>
+  									</a>
+  											<div class="caption">
+  												<p>Like avocados, olive oil has been found to help reduce the incidence of liver disease and cardiovascular diseases when consumed <a href="oliveOil.html">Read More</a></p>
+  												<p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+  							<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/walnut.jpg" alt="...">
+  										<h3>WALNUT</h3>
+  									</a>
+  											<div class="caption">
+  												<p>Nuts, when consumed in small amounts, are nutrient-dense snacks that are also high in healthy fats. <a href="walnut.html">Read More</a></p>
+  												<p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+  							<div class="col-sm-6 col-md-4">
+  									<div class="thumbnail">
+  										<a class="catagotie-head" href="blog-single.html">
+  										<img src="images/healthy/complex.jpg" alt="...">
+  										<h3>COMPLEX CARBOHYDRATE</h3>
+  									</a>
+  											<div class="caption">
+  												<p>While you don’t want your whole diet to consist of carbohydrates, you do want to make sure that you’re eating a balance of carbs,<a href="complexCarbohydrate.html">Read More</a>
+
+  </p>
+  												<p>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Like</span>
+  													</a>
+  													<a href="#" class="btn btn-default btn-transparent" role="button">
+  														<span>Comment</span>
+  													</a>
+  													</p>
+  											</div>	<!-- End of /.caption -->
+  									</div>	<!-- End of /.thumbnail -->
+  								</div>	<!-- End of /.col-sm-6 col-md-4 -->
+  						</div>	<!-- End of /.row -->
+  					</div>	<!-- End of /.block -->
+  				</div>	<!-- End of /.col-md-12 -->
+  			</div>	<!-- End of /.row -->
+  		</div>	<!-- End of /.container -->
+  	</section>	<!-- End of Section -->
 
 		<!-- CALL TO ACTION Start
     ================================================== -->
