unhealthy food added

--- a/processedmeat.html
+++ b/processedmeat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Food Concern Forum</title>
+	<title>Food Forum</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- Fonts -->
@@ -12,7 +12,6 @@
 	<!-- Css -->
 	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
 	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -39,7 +38,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>01902574042</strong></p>
+					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+565 975 658</strong></p>
 				</div>
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
@@ -50,7 +49,7 @@
 							</a>
 						</li>
 						<li>
-					<!--		<div class="cart dropdown">
+							<div class="cart dropdown">
 						  		<a data-toggle="dropdown" href="#"><i class="fa fa-shopping-cart"></i>Cart(1)</a>
 					  			<div class="dropdown-menu dropup">
 					  				<span class="caret"></span>
@@ -61,10 +60,10 @@
 										      	<h6>Italian Sauce
 								    				<span>$250</span>
 								    			</h6>
-								    		</div> -->
+								    		</div>
 								  		</li>
 									</ul>
-							<!--		<button class="btn btn-primary btn-sm">Checkout</button> -->
+									<button class="btn btn-primary btn-sm">Checkout</button>
 							    </div>
 							</div>
 						</li>
@@ -73,10 +72,10 @@
 				<div class="col-md-2">
 					<div class="search-box">
 						<div class="input-group">
-					    	<!--<input placeholder="Search Here" type="text" class="form-control">
+					    	<input placeholder="Search Here" type="text" class="form-control">
 					      	<span class="input-group-btn">
 					        	<button class="btn btn-default" type="button"></button>
-					      	</span> -->
+					      	</span>
 					    </div><!-- /.input-group -->
 					</div><!-- /.search-box -->
 				</div>
@@ -153,7 +152,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#">
-						<img src="images/logo.jpg" alt="logo" width="300px" height="200px">
+						<img src="images/logo.png" alt="logo">
 					</a>
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
@@ -168,167 +167,175 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div> <!-- End of /.navbar-header -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		    </div> <!-- End of /.navbar-header -->
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav nav-main">
-							<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#">FORUM</a></li>
-					<li><a href="bmi.php">BMI</a></li>
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      	<ul class="nav navbar-nav nav-main">
+		        	<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">SHOP</a></li>
+					<li><a href="#">SHOP BY</a></li>
+					<li><a href="#">CART</a></li>
+					<li><a href="#">NEWS</a></li>
+
 					<li class="dropdown">
-						<a href="">
-							HEALTHY FOOD
+						<a href="#">
+							PAGES
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-						   <li><a  href="healthyFood.html">Good Health</a></li>
-						    <li><a  href="hairfood.html">Hair</a></li>
-						    <li><a  href="brainfood.html">Brain and Memory</a></li>
-						    <li><a  href="skinfood.html">Healthy Skin</a></li>
-								<li><a  href="bloodfood.html">BLODD FLOW and CIRCULATION</a></li>
-								<li><a  href="eyefood.html">Healthy Eyes</a></li>
-								<li><a  href="kidneyfood.html">Healthy Kidney</a></li>
-								<li><a  href="liverfood.html">Healthy Liver</a></li>
-								<li><a  href="diabetesfood.html">CONTROL DIABETES</a></li>
-								<li><a  href="acidfood.html">ACID REFLUX</a></li>
-								<li><a  href="pressurefood.html">LOWER BLOOD PRESSURE</a></li>
+						   <li><a  href="#">Action</a></li>
+						    <li><a  href="#">Another action</a></li>
+						    <li><a  href="#">Something else here</a></li>
+						    <li><a  href="#">Separated link</a></li>
 						</ul>
 					</li> <!-- End of /.dropdown -->
-					<li class="dropdown">
-						<a href="">
-							UNHEALTHY FOOD
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-						   <li><a  href="agavenectar.html">Agave nectar</a></li>
-						    <li><a  href="lowfatyogurt.html">Low-fat yogurt</a></li>
-						    <li><a  href="junkfood.html">Gluten-free junk foods</a></li>
-						    <li><a  href="lowcarb.html">Low-carb junk foods</a></li>
-								<li><a  href="icecream.html">Ice cream</a></li>
-								<li><a  href="candybar.html">Candy bars</a></li>
-								<li><a  href="processedmeat.html">Processed meat</a></li>
-								<li><a  href="frencgfri.html">French fries and potato chips</a></li>
-								<li><a  href="pastry.html">Pastries, cookies, and cakes</a></li>
-								<li><a  href="friedfrilledboiledfood.html">Fried, grilled, or boiled food</a></li>
-								<li><a  href="breakfastcereal.html">Sweetened breakfast cereals</a></li>
-								<li><a  href="fruitjuice.html">Most fruit juices</a></li>
-								<li><a  href="whitebread.html">White bread</a></li>
-								<li><a  href="pizza.html">Pizzas</a></li>
-								<li><a  href="sugarydrink.html">Sugary drinks</a></li>
-						</ul>
-					</li> <!-- End of /.dropdown -->
-          <li><a href="#">ABOUT</a></li>
-						</ul> <!-- End of /.nav-main -->
-				</div>	<!-- /.navbar-collapse -->
+
+					<li><a href="#">PORTFOLIO</a></li>
+		        </ul> <!-- End of /.nav-main -->
+		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
 
-	<!-- SLIDER Start
+
+<!-- breadcrumb Start
     ================================================== -->
 
-
-	<section id="slider-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div id="slider" class="nivoSlider">
-				    	<img src="images/slider.jpg" alt="" />
-				    	<img src="images/slider1.jpg" alt=""/>
-				    	<img src="images/slider2.jpg" alt="" />
-					</div>	<!-- End of /.nivoslider -->
-				</div>	<!-- End of /.col-md-12 -->
-			</div>	<!-- End of /.row -->
-		</div>	<!-- End of /.container -->
-	</section> <!-- End of Section -->
-
-
-
-	<!-- FEATURES Start
-    ================================================== -->
-
-	<section id="features">
+	<section id="topic-header">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
+					<h1>Food Details</h1>
+					<p></p>
+				</div>	<!-- /.col-md-4 -->
+				<div class="col-md-8 hidden-xs">
+					<ol class="breadcrumb pull-right">
+					  	<li><a href="#">Home</a></li>
+					  	<li><a href="#">Products</a></li>
+					  	<li class="active">Single Products</li>
+					</ol>
+				</div> <!-- /.col-md-8 -->
+			</div>	<!-- /.row -->
+		</div>	<!-- /.container-->
+	</section><!-- /Section -->
+
+
+
+
+	<section id="single-product">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<div class="single-product-img">
+						<img src="images/single-product.png" alt="">
+					</div>
+
+				</div> <!-- End of /.col-md-5 -->
+				<div class="col-md-4">
 					<div class="block">
-						<div class="media">
-							<div class="pull-left" href="#">
-						    	<i class="fa fa-ambulance"></i>
-						  	</div>
-						  	<div class="media-body">
-						    	<h4 class="media-heading">Free Shipping</h4>
-						    	<p>Lorem ipsum dolor sit amet, consectetur.</p>
-						  </div>
+						<div class="product-des">
+							<h4>Processed Meat</h4>
+							<p>Even though unprocessed meat can be healthy and nutritious, the same is not true for processed meats.
+Studies show that people who eat processed meats have a higher risk of many serious ailments, including colon cancer, type 2 diabetes, and heart disease (28, 29Trusted Source).
+Most of these studies are observational in nature, meaning that they can’t prove that processed meat is to blame. However, the statistical link is strong and consistent between studies.
+
+This are the Diseases for that food: Processed Meat. Processed meat—from hot dogs to bacon—increases the risk ofcolorectal cancer, cardiovascular disease, and even early death.
+</p>
+<h3>Alternatives</h3>
+<p>If you want to eat bacon, sausages, or pepperoni, try to buy from local butchers who don’t add many unhealthy ingredients.
+</p>
+						</div>	<!-- End of /.product-des -->
+					</div> <!-- End of /.block -->
+				</div>	<!-- End of /.col-md-4 -->
+				<div class="col-md-3">
+					<div class="blog-sidebar">
+						<div class="block">
+							<h4 class="top-catagori-heading">Latest Food Items</h4>
+							<ul class="media-list">
+							 	<li class="media">
+							    	<a class="pull-left" href="#">
+							      		<img class="media-object" src="images/post-img.png" alt="...">
+							    	</a>
+							    	<div class="media-body">
+							      		<a href="" class="media-heading">Lamb leg roast
+							      		<p>Lorem ipsum dolor sit amet.</p></a>
+							    	</div>
+							  	</li>	<!-- End of /.media -->
+							  	<li class="media">
+							    	<a class="pull-left" href="#">
+							      		<img class="media-object" src="images/post-img-2.png" alt="...">
+							    	</a>
+							    	<div class="media-body">
+							      		<a href="" class="media-heading"> Lamingtons
+							      		<p>Lorem ipsum dolor.</p></a>
+							    	</div>
+							  	</li>	<!-- End of /.media -->
+							  	<li class="media">
+							    	<a class="pull-left" href="#">
+							      		<img class="media-object" src="images/post-img-3.png" alt="...">
+							    	</a>
+							    	<div class="media-body">
+							      		<a href="" class="media-heading">
+							      		Anzac Salad
+							      		<p>Lorem ipsum dolor sit.</p>
+
+							      		</a>
+							    	</div>
+							  	</li>	<!-- End of /.media -->
+							  	<li class="media">
+							    	<a class="pull-left" href="#">
+							      		<img class="media-object" src="images/post-img-3.png" alt="...">
+							    	</a>
+							    	<div class="media-body">
+							      		<a href="" class="media-heading">
+							      		Anzac Salad
+							      		<p>Lorem ipsum dolor sit.</p>
+
+							      		</a>
+							    	</div>
+							  	</li>	<!-- End of /.media -->
+							</ul>	<!-- End of /.media-list -->
+						</div>	<!-- End of /.block -->
+
+					</div>	<!-- End of /.blog-sidebar -->
+
+				</div>	<!-- End of /.col-md-3 -->
+			</div>	<!-- End of /.row -->
+			<div class="row">
+				<div class="col-md-9">
+					<!-- Nav tabs -->
+					<ul class="nav nav-tabs">
+						<li class="active"><a href="#home" data-toggle="tab">Like</a></li>
+						<li><a href="#profile" data-toggle="tab">Comments</a></li>
+					</ul>
+
+					<!-- Tab panes -->
+					<div class="tab-content">
+						<div class="tab-pane active" id="home">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eligendi quidem vel sit expedita nam sint non explicabo magni totam?</p>
+						</div>
+						<div class="tab-pane" id="profile">
+							<p>No customer comments for the moment.</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="block">
-						<div class="media">
-							<div class="pull-left" href="#">
-								<i class=" fa fa-foursquare"></i>
-						  	</div>
-						  	<div class="media-body">
-						    	<h4 class="media-heading">Media heading</h4>
-						    	<p>Lorem ipsum dolor sit amet, consectetur.</p>
-						  </div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="block">
-						<div class="media">
-							<div class="pull-left" href="#">
-						    	<i class=" fa fa-phone"></i>
-						  	</div>
-						  	<div class="media-body">
-						    	<h4 class="media-heading">Call Us</h4>
-						    	<p>Lorem ipsum dolor sit amet, consectetur.</p>
-						  </div>	<!-- End of /.media-body -->
-						</div>	<!-- End of /.media -->
-					</div>	<!-- End of /.block -->
-				</div> <!-- End of /.col-md-4 -->
+				</div>	<!-- End of /.col-md-9 -->
+				<div class="col-md-3">
+					<div class="blog-sidebar">
+						<div class="block">
+							<img src="images/food-ad.png" alt="">
+						</div> <!-- End of /.block -->
+					</div>	<!-- End of /.blog-sidebar -->
+				</div>	<!-- End of /.col-md-3 -->
 			</div>	<!-- End of /.row -->
-		</div>	<!-- End of /.container -->
-	</section>	<!-- End of section -->
-
-		<!-- CALL TO ACTION Start
-    ================================================== -->
-
-	<section id="call-to-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="block">
-						<div class="block-heading">
-							<h2>Our Partners</h2>
-						</div>
-					</div>	<!-- End of /.block -->
-					<div id="owl-example" class="owl-carousel">
-						<div> <img src="images/company-1.png" alt=""></div>
-						<div> <img src="images/company-2.png" alt=""></div>
-						<div> <img src="images/company-3.png" alt=""></div>
-						<div> <img src="images/company-4.png" alt=""></div>
-						<div> <img src="images/company-5.png" alt=""></div>
-						<div> <img src="images/company-6.png" alt=""></div>
-						<div> <img src="images/company-8.png" alt=""></div>
-						<div> <img src="images/company-9.png" alt=""></div>
-					</div>	<!-- End of /.Owl-Slider -->
-				</div>	<!-- End of /.col-md-12 -->
-			</div> <!-- End Of /.Row -->
-		</div> <!-- End Of /.Container -->
-	</section>	<!-- End of Section -->
-
-
-
+		</div>	<!-- End of /.Container -->
+	</section> <!-- End of /.Single-product -->
 	<!-- FOOTER Start
     ================================================== -->
 
@@ -448,7 +455,7 @@
 								</a>
 							</li>
 						</ul>
-						<p class="copyright-text pull-right">Food Concerning Forum @2019 Designed by <a href="#">Shakira Mostari</a> All Rights Reserved</p>
+						<p class="copyright-text pull-right">Food Code @2013 Designed by <a href="http://www.themexpert.com">Themexpert</a> All Rights Reserved</p>
 					</div>	<!-- End Of /.col-md-12 -->
 				</div>	<!-- End Of /.row -->
 			</div>	<!-- End Of /.container -->
