--- a/brainfood.html
+++ b/brainfood.html
@@ -169,27 +169,66 @@
 
 	<nav class="navbar navbar-default">
 		<div class="container">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		    </div> <!-- End of /.navbar-header -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div> <!-- End of /.navbar-header -->
 
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		      	<ul class="nav navbar-nav nav-main">
-		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#">ABOUT</a></li>
-					<li><a href="#">FORUM</a></li>
-					<li><a href="#">BMI</a></li>
-					<li><a href="healthyFood.html">HEALTHY FOOD</a></li>
-					<li><a href="unhealthyFood.html">UNHEALTHY FOOD</a></li>
-		        </ul> <!-- End of /.nav-main -->
-		    </div>	<!-- /.navbar-collapse -->
-		</div>	<!-- /.container-fluid -->
-	</nav>	<!-- End of /.nav -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav nav-main">
+						<li class="active"><a href="#">HOME</a></li>
+				<li><a href="bmi.php">BMI</a></li>
+				<li class="dropdown">
+					<a href="">
+						HEALTHY FOOD
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+					   <li><a  href="healthyFood.html">Good Health</a></li>
+						<li><a  href="hairfood.html">Hair</a></li>
+						<li><a  href="brainfood.html">Brain and Memory</a></li>
+						<li><a  href="skinfood.html">Healthy Skin</a></li>
+							<li><a  href="bloodfood.html">BLODD FLOW and CIRCULATION</a></li>
+							<li><a  href="eyefood.html">Healthy Eyes</a></li>
+							<li><a  href="kidneyfood.html">Healthy Kidney</a></li>
+							<li><a  href="liverfood.html">Healthy Liver</a></li>
+							<li><a  href="diabetesfood.html">CONTROL DIABETES</a></li>
+							<li><a  href="acidfood.html">ACID REFLUX</a></li>
+							<li><a  href="pressurefood.html">LOWER BLOOD PRESSURE</a></li>
+					</ul>
+				</li> <!-- End of /.dropdown -->
+				<li class="dropdown">
+					<a href="">
+						UNHEALTHY FOOD
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+					   <li><a  href="agavenectar.html">Agave nectar</a></li>
+						<li><a  href="lowfatyogurt.html">Low-fat yogurt</a></li>
+						<li><a  href="junkfood.html">Gluten-free junk foods</a></li>
+						<li><a  href="lowcarb.html">Low-carb junk foods</a></li>
+							<li><a  href="icecream.html">Ice cream</a></li>
+							<li><a  href="candybar.html">Candy bars</a></li>
+							<li><a  href="processedmeat.html">Processed meat</a></li>
+							<li><a  href="frencgfri.html">French fries and potato chips</a></li>
+							<li><a  href="pastry.html">Pastries, cookies, and cakes</a></li>
+							<li><a  href="friedfrilledboiledfood.html">Fried, grilled, or boiled food</a></li>
+							<li><a  href="breakfastcereal.html">Sweetened breakfast cereals</a></li>
+							<li><a  href="fruitjuice.html">Most fruit juices</a></li>
+							<li><a  href="whitebread.html">White bread</a></li>
+							<li><a  href="pizza.html">Pizzas</a></li>
+							<li><a  href="sugarydrink.html">Sugary drinks</a></li>
+					</ul>
+				</li> <!-- End of /.dropdown -->
+	  <li><a href="about.html">ABOUT</a></li>
+					</ul> <!-- End of /.nav-main -->
+			</div>	<!-- /.navbar-collapse -->
+	</div>	<!-- /.container-fluid -->
+</nav>	<!-- End of /.nav -->
 
 
 	<!-- SLIDER Start
@@ -485,27 +524,7 @@
 				</div> <!-- End Of Col-md-3 -->
 				<div class="col-md-4">
 					<div class="block">
-						<h4>UPCOMING ITEMS</h4>
-						<div class="media">
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/product-item.jpg" alt="...">
-						  	</a>
-						</div>	<!-- End Of /.media -->
+						
 					</div>	<!-- End Of /.block -->
 				</div> <!-- End Of Col-md-3 -->
 			</div> <!-- End Of /.row -->
@@ -520,33 +539,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<ul class="cash-out pull-left">
-							<li>
-								<a href="#">
-									<img src="images/American-Express.png" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="images/PayPal.png" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="images/Maestro.png" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="images/Visa.png" alt="">
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="images/Visa-Electron.png" alt="">
-								</a>
-							</li>
-						</ul>
+						
 						<p class="copyright-text pull-right">Food Concerning Forum @2019 Designed by <a href="#">Shakira Mostari</a> All Rights Reserved</p>
 					</div>	<!-- End Of /.col-md-12 -->
 				</div>	<!-- End Of /.row -->
